feat: use new BPN Policy in artefacts and E2E tests (#690)
* feat: use new BPN Policy in artefacts and E2E tests

* moved old code to the new module

* add README.md

* update helm charts, extend helm tests

* update helm tests

* unrelated: clean out old files

* use mgmt api as helm test

* fix datasource in azure chart